# livepaper

./: .gitignore  LICENSE  PKGBUILD  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
resources/: livepaper.desktop
src/livepaper/: __init__.py  __main__.py
src/livepaper/models/: __init__.py
src/livepaper/services/: __init__.py  config_manager.py  dbus_client.py  system_detector.py  thumbnail_generator.py  wallpaper_service.py
src/livepaper/ui/: main_window.py  qml_bridge.py  utils.py
src/livepaper/ui/dialogs/: __init__.py  add_wallpaper_dialog.py
src/livepaper/ui/pages/: __init__.py  about_page.py  library_view.py  settings_page.py  setup_wizard.py
src/livepaper/ui/qml/: AboutPage.qml  ActionPanel.qml  HomePage.qml  SettingsPage.qml  Sidebar.qml  WallpaperCard.qml  WallpapersPage.qml  main.qml
src/livepaper/ui/widgets/: __init__.py  wallpaper_card.py
tests/: conftest.py  test_config_manager.py  test_dbus_client.py  test_models.py  test_qml_bridge.py  test_system_detector.py
