[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livepaper"
version = "1.0.0"
description = "A polished KDE Plasma 6 desktop app for video wallpapers, built on top of Smart Video Wallpaper Reborn."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Vachan Shetty" },
]
keywords = ["kde", "plasma", "wallpaper", "video", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
]
dependencies = [
    "PyQt6>=6.6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.0",
    "ruff>=0.4.0",
    "bandit>=1.7",
]

[project.scripts]
livepaper = "livepaper.__main__:main"

[project.gui-scripts]
livepaper-gui = "livepaper.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/livepaper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["src/livepaper"]
omit = ["src/livepaper/ui/*"]
